[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqsampling"
version = "0.1.0"
description = "study of sampling"
readme = "README.md"
requires-python = "==3.10.15"
authors = [
  { name = "Sergey Troshin", email = "serj.troshin@proton.me" },
  { name = "Irina Saparina", email = "i.saparina@sms.ed.ac.uk" },
]
dependencies = [
  "pkginfo>=1.12",
  "tqdm==4.66.1",
  "hydra-core>=1.3.2,<2.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "openai>=2.8.1,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "uvicorn>=0.32.0,<0.33.0",
  "pydantic>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]